tests/spec/emit/snapshots/match_one_arm_float_result_declares_with_short_form.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Pair(float64, float64)
  
  fn area(p: Pair) -> float64 {
    let a = match p {
      Pair(x, y) => x * y,
    };
    a
  }
---
package main

type Pair struct {
	F0 float64
	F1 float64
}

func area(p Pair) float64 {
	a := p.F0 * p.F1
	return a
}
