tests/spec/emit/snapshots/match_one_arm_tuple_no_outer_leak.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn test() -> string {
    let n = 50;
    let s = "original";
    let pair = (100, "replaced");
    let r = match pair {
      (n, s) => f"{n}-{s}",
    };
    f"{n} {s} {r}"
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func test() string {
	n := 50
	s := "original"
	pair := lisette.MakeTuple2[int, string](100, "replaced")
	var r string
	{
		n_1 := pair.First
		s_2 := pair.Second
		r = fmt.Sprintf("%d-%s", n_1, s_2)
	}
	return fmt.Sprintf("%d %s %s", n, s, r)
}
