tests/spec/emit/snapshots/match_one_arm_tuple_struct_no_outer_leak.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Pair(int, int)
  
  fn test() -> int {
    let a = 100;
    let b = 200;
    let p = Pair(1, 2);
    let sum = match p {
      Pair(a, b) => a + b,
    };
    a + b + sum
  }
---
package main

type Pair struct {
	F0 int
	F1 int
}

func test() int {
	a := 100
	b := 200
	p := Pair{
		F0: 1,
		F1: 2,
	}
	sum := p.F0 + p.F1
	return a + b + sum
}
