tests/spec/emit/snapshots/match_one_arm_tuple_struct_reused_binding_name.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  struct Pair(int, int)
  struct Name(string)
  
  fn test() -> string {
    let p = Pair(1, 2);
    let a = match p {
      Pair(x, y) => x + y,
    };
  
    let n = Name("hello");
    let b = match n {
      Name(x) => x,
    };
  
    b
  }
---
package main

type Pair struct {
	F0 int
	F1 int
}

type Name string

func test() string {
	p := Pair{
		F0: 1,
		F1: 2,
	}
	_ = p.F0 + p.F1
	n := Name("hello")
	b := string(n)
	return b
}
