tests/spec/emit/snapshots/match_or_pattern_guard_unused_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E { A(int), B(int), C }
  fn test() {
    let e = E.C
    match e {
      E.A(x) | E.B(x) if false => (),
      _ => (),
    }
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag int

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test() {
	e := MakeEC()
match_1:
	for {
		if e.Tag == EA {
			if false {
				break match_1
			}
		}
		if e.Tag == EB {
			if false {
				break match_1
			}
		}
		{
			break match_1
		}
	}
}
