tests/spec/emit/snapshots/match_or_pattern_partial_unused_binding.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  enum E { A((int, int)), B((int, int)), C }
  fn eval(e: E) -> int {
    match e {
      E.A((x, y)) | E.B((x, y)) => x,
      _ => 0,
    }
  }
  fn test() {
    if eval(E.B((4, 9))) != 4 { panic("bad") }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func MakeEA(arg0 lisette.Tuple2[int, int]) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 lisette.Tuple2[int, int]) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag int

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   lisette.Tuple2[int, int]
	B   lisette.Tuple2[int, int]
}

func eval(e E) int {
	switch e.Tag {
	case EA:
		return e.A.First
	case EB:
		return e.B.First
	default:
		return 0
	}
}

func test() {
	if eval(MakeEB(lisette.MakeTuple2[int, int](4, 9))) != 4 {
		panic("bad")
	}
}
