tests/spec/emit/snapshots/match_returning_option.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test(flag: bool) -> Option<int> {
    match flag {
      true => Some(42),
      false => None,
    }
  }
---
package main

func test(flag bool) (int, bool) {
	if flag {
		return 42, true
	}
	return *new(int), false
}
