tests/spec/emit/snapshots/match_returning_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test(flag: bool) -> Result<int, string> {
    match flag {
      true => Ok(42),
      false => Err("failed"),
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(flag bool) lisette.Result[int, string] {
	if flag {
		return lisette.MakeResultOk[int, string](42)
	}
	return lisette.MakeResultErr[int, string]("failed")
}
